--- a/files/goods.htm
+++ b/files/goods.htm
@@ -4,11 +4,11 @@
 		<!-- Изображение товара  {% IF GOODS_IMAGE_ID = goods_images.ID %}style="display: none;"{% ENDIF %} -->
 		<div class="productView__images" data-id="{GOODS_IMAGE_ID}">
 			<!-- Основноре Изображение -->
-			<a class="productView__image flex-center" href="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=marketplace{% ELSE %}{GOODS_IMAGE_LARGE}{% ENDIF %}" data-fancybox="images">
+			<a class="productView__image flex-center" href="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{GOODS_IMAGE_LARGE}{% ENDIF %}" data-fancybox="images">
 				<noscript>
-				<img src="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=marketplace{% ELSE %}{GOODS_IMAGE_MEDIUM}{% ENDIF %}" title="{GOODS_NAME}" alt="{GOODS_NAME}" itemprop="image" />
+				<img src="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{GOODS_IMAGE_MEDIUM}{% ENDIF %}" title="{GOODS_NAME}" alt="{GOODS_NAME}" itemprop="image" />
 				</noscript>
-				<img class="lozad scriptOff" data-src="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=marketplace{% ELSE %}{GOODS_IMAGE_MEDIUM}{% ENDIF %}" title="{GOODS_NAME}" alt="{GOODS_NAME}" itemprop="image" />
+				<img class="lozad scriptOff" data-src="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{GOODS_IMAGE_MEDIUM}{% ENDIF %}" title="{GOODS_NAME}" alt="{GOODS_NAME}" itemprop="image" />
 			</a>
 			
 			<!-- Стикеры -->
@@ -156,7 +156,7 @@
 					<input type="hidden" name="form[goods_mod_id][{GOODS_MOD_ID}]" value="1" class="goodsDataMainModificationId" />
 					<input type="hidden" name="form[goods_id]" value="{GOODS_ID}" />
 					<!-- <input type="hidden" name="form[goods_unique_put_only_one]" value="1" /> -->
-					<input type="hidden" class="goodsDataMainImage" data-id="{GOODS_IMAGE_ID}" data-src="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=florist{% ELSE %}{GOODS_IMAGE_MEDIUM}{% ENDIF %}" />
+					<input type="hidden" class="goodsDataMainImage" data-id="{GOODS_IMAGE_ID}" data-src="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{GOODS_IMAGE_MEDIUM}{% ENDIF %}" />
 					<!-- Модификации -->
 					<div class="goodsModificationsBlock" {% IF GOODS_NO_CHOISE_IN_PROPERTIES_FOR_MODIFICATIONS %}style="display:none;" {% ENDIF %}>
 						<div class="goodsModificationsPropertys">
@@ -248,7 +248,7 @@
 								data-action-delete-title="Убрать &laquo;{GOODS_NAME}&raquo; из списка сравнения с другими товарами"
 								data-prodname="{GOODS_NAME}"
 								data-produrl="{GOODS_URL}"
-								data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=florist{% ELSE %}{GOODS_IMAGE_ICON}{% ENDIF %}"
+								data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{GOODS_IMAGE_ICON}{% ENDIF %}"
 								data-id="{GOODS_ID}"
 								data-mod-id="{GOODS_MOD_ID}"
 								data-mod-price="{GOODS_MOD_PRICE_NOW}"
@@ -270,7 +270,7 @@
 								data-action-delete-title="Убрать &laquo;{GOODS_NAME}&raquo; из списка сравнения с другими товарами"
 								data-prodname="{GOODS_NAME}"
 								data-produrl="{GOODS_URL}"
-								data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=florist{% ELSE %}{GOODS_IMAGE_ICON}{% ENDIF %}"
+								data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{GOODS_IMAGE_ICON}{% ENDIF %}"
 								data-id="{GOODS_ID}"
 								data-mod-id="{GOODS_MOD_ID}"
 								data-mod-price="{GOODS_MOD_PRICE_NOW}"
@@ -297,7 +297,7 @@
 								data-gname="{GOODS_NAME}"
 								data-prodname="{GOODS_NAME}"
 								data-produrl="{GOODS_URL}"
-								data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=florist{% ELSE %}{GOODS_IMAGE_ICON}{% ENDIF %}"
+								data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{GOODS_IMAGE_ICON}{% ENDIF %}"
 								data-id="{GOODS_ID}"
 								data-mod-id="{GOODS_MIN_PRICE_NOW_ID}"
 								data-mod-price="{GOODS_MOD_PRICE_NOW}"
@@ -321,7 +321,7 @@
 								data-gname="{GOODS_NAME}"
 								data-prodname="{GOODS_NAME}"
 								data-produrl="{GOODS_URL}"
-								data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=florist{% ELSE %}{GOODS_IMAGE_ICON}{% ENDIF %}"
+								data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{GOODS_IMAGE_ICON}{% ENDIF %}"
 								data-id="{GOODS_ID}"
 								data-mod-id="{GOODS_MIN_PRICE_NOW_ID}"
 								data-mod-price="{GOODS_MOD_PRICE_NOW}"
@@ -728,15 +728,15 @@
 				<input type="hidden" name="form[goods_mod_id]" value="{related_goods.MIN_PRICE_NOW_ID}" />
 				<input type="hidden" name="form[goods_id][{related_goods.ID}]" value="{related_goods.ID}" />
 				<!-- <input type="hidden" name="form[goods_unique_put_only_one]" value="1" /> -->
-				<link itemprop="image" href="{% IF related_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{related_goods.IMAGE_MEDIUM}{% ENDIF %}" />
+				<link itemprop="image" href="{% IF related_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{related_goods.IMAGE_MEDIUM}{% ENDIF %}" />
 				<!-- Изображение товара -->
 				<div class="product__image">
 					<!-- Изображение -->
 					<a class="product__img flex-center" href="{related_goods.URL_MIN_PRICE_NOW | url_amp}" title="{related_goods.NAME}" itemprop="url">
 						<noscript>
-							<img src="{% IF related_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{related_goods.IMAGE_MEDIUM}{% ENDIF %}" alt="{related_goods.NAME}" />
+							<img src="{% IF related_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{related_goods.IMAGE_MEDIUM}{% ENDIF %}" alt="{related_goods.NAME}" />
 						</noscript>
-						<img class="lozad script__on" src="{ASSETS_IMAGES_PATH}placeholder.png?design=THEMENAME" data-src="{% IF related_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{related_goods.IMAGE_MEDIUM}{% ENDIF %}" alt="{related_goods.NAME}" />
+						<img class="lozad script__on" src="{ASSETS_IMAGES_PATH}placeholder.png?design=HOLIDAY" data-src="{% IF related_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{related_goods.IMAGE_MEDIUM}{% ENDIF %}" alt="{related_goods.NAME}" />
 					</a>
 		
 					<!-- Стикеры -->
@@ -772,7 +772,7 @@
 							data-action-delete-title="Убрать &laquo;{related_goods.NAME}&raquo; из списка сравнения с другими товарами"
 							data-prodname="{related_goods.NAME}"
 							data-produrl="{related_goods.URL}"
-							data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{related_goods.IMAGE_ICON}{% ENDIF %}"
+							data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{related_goods.IMAGE_ICON}{% ENDIF %}"
 							data-id="{related_goods.ID}"
 							data-mod-id="{related_goods.MIN_PRICE_NOW_ID}"
 							data-mod-price="{related_goods.MIN_PRICE_NOW}"
@@ -794,7 +794,7 @@
 							data-action-delete-title="Убрать &laquo;{related_goods.NAME}&raquo; из списка сравнения с другими товарами"
 							data-prodname="{related_goods.NAME}"
 							data-produrl="{related_goods.URL}"
-							data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{related_goods.IMAGE_ICON}{% ENDIF %}"
+							data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{related_goods.IMAGE_ICON}{% ENDIF %}"
 							data-id="{related_goods.ID}"
 							data-mod-id="{related_goods.MIN_PRICE_NOW_ID}"
 							data-mod-price="{related_goods.MIN_PRICE_NOW}"
@@ -850,7 +850,7 @@
 							data-action-delete-title="Убрать &laquo;{related_goods.NAME}&raquo; из Избранного"
 							data-prodname="{related_goods.NAME}"
 							data-produrl="{related_goods.URL}"
-							data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{related_goods.IMAGE_ICON}{% ENDIF %}"
+							data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{related_goods.IMAGE_ICON}{% ENDIF %}"
 							data-id="{related_goods.ID}"
 							data-mod-id="{related_goods.MIN_PRICE_NOW_ID}"
 							data-mod-price="{related_goods.MIN_PRICE_NOW}"
@@ -872,7 +872,7 @@
 							data-action-delete-title="Убрать &laquo;{related_goods.NAME}&raquo; из Избранного"
 							data-prodname="{related_goods.NAME}"
 							data-produrl="{related_goods.URL}"
-							data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{related_goods.IMAGE_ICON}{% ENDIF %}"
+							data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{related_goods.IMAGE_ICON}{% ENDIF %}"
 							data-id="{related_goods.ID}"
 							data-mod-id="{related_goods.MIN_PRICE_NOW_ID}"
 							data-mod-price="{related_goods.MIN_PRICE_NOW}"
@@ -947,15 +947,15 @@
 				<input type="hidden" name="form[goods_mod_id]" value="{related_views_goods.MIN_PRICE_NOW_ID}" />
 				<input type="hidden" name="form[goods_id][{related_views_goods.ID}]" value="{related_views_goods.ID}" />
 				<!-- <input type="hidden" name="form[goods_unique_put_only_one]" value="1" /> -->
-				<link itemprop="image" href="{% IF related_views_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{related_views_goods.IMAGE_MEDIUM}{% ENDIF %}" />
+				<link itemprop="image" href="{% IF related_views_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{related_views_goods.IMAGE_MEDIUM}{% ENDIF %}" />
 				<!-- Изображение товара -->
 				<div class="product__image">
 					<!-- Изображение -->
 					<a class="product__img flex-center" href="{related_views_goods.URL_MIN_PRICE_NOW | url_amp}" title="{related_views_goods.NAME}" itemprop="url">
 						<noscript>
-							<img src="{% IF related_views_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{related_views_goods.IMAGE_MEDIUM}{% ENDIF %}" alt="{related_views_goods.NAME}" />
+							<img src="{% IF related_views_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{related_views_goods.IMAGE_MEDIUM}{% ENDIF %}" alt="{related_views_goods.NAME}" />
 						</noscript>
-						<img class="lozad script__on" src="{ASSETS_IMAGES_PATH}placeholder.png?design=THEMENAME" data-src="{% IF related_views_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{related_views_goods.IMAGE_MEDIUM}{% ENDIF %}" alt="{related_views_goods.NAME}" />
+						<img class="lozad script__on" src="{ASSETS_IMAGES_PATH}placeholder.png?design=HOLIDAY" data-src="{% IF related_views_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{related_views_goods.IMAGE_MEDIUM}{% ENDIF %}" alt="{related_views_goods.NAME}" />
 					</a>
 		
 					<!-- Стикеры -->
@@ -991,7 +991,7 @@
 							data-action-delete-title="Убрать &laquo;{related_views_goods.NAME}&raquo; из списка сравнения с другими товарами"
 							data-prodname="{related_views_goods.NAME}"
 							data-produrl="{related_views_goods.URL}"
-							data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{related_views_goods.IMAGE_ICON}{% ENDIF %}"
+							data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{related_views_goods.IMAGE_ICON}{% ENDIF %}"
 							data-id="{related_views_goods.ID}"
 							data-mod-id="{related_views_goods.MIN_PRICE_NOW_ID}"
 							data-mod-price="{related_views_goods.MIN_PRICE_NOW}"
@@ -1013,7 +1013,7 @@
 							data-action-delete-title="Убрать &laquo;{related_views_goods.NAME}&raquo; из списка сравнения с другими товарами"
 							data-prodname="{related_views_goods.NAME}"
 							data-produrl="{related_views_goods.URL}"
-							data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{related_views_goods.IMAGE_ICON}{% ENDIF %}"
+							data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{related_views_goods.IMAGE_ICON}{% ENDIF %}"
 							data-id="{related_views_goods.ID}"
 							data-mod-id="{related_views_goods.MIN_PRICE_NOW_ID}"
 							data-mod-price="{related_views_goods.MIN_PRICE_NOW}"
@@ -1069,7 +1069,7 @@
 							data-action-delete-title="Убрать &laquo;{related_views_goods.NAME}&raquo; из Избранного"
 							data-prodname="{related_views_goods.NAME}"
 							data-produrl="{related_views_goods.URL}"
-							data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{related_views_goods.IMAGE_ICON}{% ENDIF %}"
+							data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{related_views_goods.IMAGE_ICON}{% ENDIF %}"
 							data-id="{related_views_goods.ID}"
 							data-mod-id="{related_views_goods.MIN_PRICE_NOW_ID}"
 							data-mod-price="{related_views_goods.MIN_PRICE_NOW}"
@@ -1091,7 +1091,7 @@
 							data-action-delete-title="Убрать &laquo;{related_views_goods.NAME}&raquo; из Избранного"
 							data-prodname="{related_views_goods.NAME}"
 							data-produrl="{related_views_goods.URL}"
-							data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{related_views_goods.IMAGE_ICON}{% ENDIF %}"
+							data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{related_views_goods.IMAGE_ICON}{% ENDIF %}"
 							data-id="{related_views_goods.ID}"
 							data-mod-id="{related_views_goods.MIN_PRICE_NOW_ID}"
 							data-mod-price="{related_views_goods.MIN_PRICE_NOW}"
