--- a/files/client_favorites_list.htm
+++ b/files/client_favorites_list.htm
@@ -13,15 +13,15 @@
 					<input type="hidden" name="form[goods_mod_id]" value="{favorites_goods.MIN_PRICE_NOW_ID}" />
 					<input type="hidden" name="form[goods_id][{favorites_goods.ID}]" value="{favorites_goods.ID}" />
 					<!-- <input type="hidden" name="form[goods_unique_put_only_one]" value="1" /> -->
-					<link itemprop="image" href="{% IF favorites_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{favorites_goods.IMAGE_MEDIUM}{% ENDIF %}" />
+					<link itemprop="image" href="{% IF favorites_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{favorites_goods.IMAGE_MEDIUM}{% ENDIF %}" />
 					<!-- Изображение товара -->
 					<div class="product__image">
 						<!-- Изображение -->
 						<a class="product__img flex-center" href="{favorites_goods.URL_MIN_PRICE_NOW | url_amp}" title="{favorites_goods.NAME}" itemprop="url">
 							<noscript>
-								<img src="{% IF favorites_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{favorites_goods.IMAGE_MEDIUM}{% ENDIF %}" alt="{favorites_goods.NAME}" />
+								<img src="{% IF favorites_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{favorites_goods.IMAGE_MEDIUM}{% ENDIF %}" alt="{favorites_goods.NAME}" />
 							</noscript>
-							<img class="lozad script__on" src="{ASSETS_IMAGES_PATH}placeholder.png?design=THEMENAME" data-src="{% IF favorites_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{favorites_goods.IMAGE_MEDIUM}{% ENDIF %}" alt="{favorites_goods.NAME}" />
+							<img class="lozad script__on" src="{ASSETS_IMAGES_PATH}placeholder.png?design=HOLIDAY" data-src="{% IF favorites_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{favorites_goods.IMAGE_MEDIUM}{% ENDIF %}" alt="{favorites_goods.NAME}" />
 						</a>
 
 						<!-- Стикеры -->
@@ -57,7 +57,7 @@
 								data-action-delete-title="Убрать &laquo;{favorites_goods.NAME}&raquo; из списка сравнения с другими товарами"
 								data-prodname="{favorites_goods.NAME}"
 								data-produrl="{favorites_goods.URL}"
-								data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{favorites_goods.IMAGE_ICON}{% ENDIF %}"
+								data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{favorites_goods.IMAGE_ICON}{% ENDIF %}"
 								data-id="{favorites_goods.ID}"
 								data-mod-id="{favorites_goods.MIN_PRICE_NOW_ID}"
 								data-mod-price="{favorites_goods.MIN_PRICE_NOW}"
@@ -79,7 +79,7 @@
 								data-action-delete-title="Убрать &laquo;{favorites_goods.NAME}&raquo; из списка сравнения с другими товарами"
 								data-prodname="{favorites_goods.NAME}"
 								data-produrl="{favorites_goods.URL}"
-								data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{favorites_goods.IMAGE_ICON}{% ENDIF %}"
+								data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{favorites_goods.IMAGE_ICON}{% ENDIF %}"
 								data-id="{favorites_goods.ID}"
 								data-mod-id="{favorites_goods.MIN_PRICE_NOW_ID}"
 								data-mod-price="{favorites_goods.MIN_PRICE_NOW}"
@@ -135,7 +135,7 @@
 								data-action-delete-title="Убрать &laquo;{favorites_goods.NAME}&raquo; из Избранного"
 								data-prodname="{favorites_goods.NAME}"
 								data-produrl="{favorites_goods.URL}"
-								data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{favorites_goods.IMAGE_ICON}{% ENDIF %}"
+								data-prodimg="{% IF GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{favorites_goods.IMAGE_ICON}{% ENDIF %}"
 								data-id="{favorites_goods.ID}"
 								data-mod-id="{favorites_goods.MIN_PRICE_NOW_ID}"
 								data-mod-price="{favorites_goods.MIN_PRICE_NOW}"
