--- a/files/order.htm
+++ b/files/order.htm
@@ -345,7 +345,7 @@
           <tbody>
             {% FOR cart_items %}
               <tr class="items"> 
-                <td><div class="image"><a href="{cart_items.GOODS_URL}"><img class="goods-image-icon" src="{% IF cart_items.GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=Deluxe{% ELSE %}{cart_items.GOODS_IMAGE_ICON}{% ENDIF %}"></a></div></td>
+                <td><div class="image"><a href="{cart_items.GOODS_URL}"><img class="goods-image-icon" src="{% IF cart_items.GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=HOLIDAY{% ELSE %}{cart_items.GOODS_IMAGE_ICON}{% ENDIF %}"></a></div></td>
                 <td class="name"> 
                   <a href="{cart_items.GOODS_URL}">
                     {cart_items.GOODS_NAME}
